--- a/docs/components/modules/others/nav.adoc
+++ b/docs/components/modules/others/nav.adoc
@@ -2,7 +2,6 @@
 // make edits in docs/*nav.adoc.template files instead
 
 * xref:others:index.adoc[Miscellaneous Components]
-*** xref:langchain4j-tokenizer.adoc[LangChain4j Tokenizer]
 ** xref:attachments.adoc[Attachments]
 ** xref:aws-xray.adoc[AWS XRay]
 ** xref:azure-schema-registry.adoc[Azure Schema Registry]
@@ -24,6 +23,7 @@
 ** xref:jasypt.adoc[Jasypt]
 ** xref:jfr.adoc[JFR]
 ** xref:jta.adoc[JTA]
+** xref:langchain4j-tokenizer.adoc[LangChain4j Tokenizer]
 ** xref:leveldb.adoc[LevelDB]
 ** xref:lra.adoc[LRA]
 ** xref:mail-microsoft-oauth.adoc[Mail Microsoft Oauth]
@@ -52,7 +52,7 @@
 ** xref:resourceresolver-github.adoc[Resourceresolver Github]
 ** xref:rxjava.adoc[RxJava]
 ** xref:shiro.adoc[Shiro]
-*** xref:spring-cloud-config.adoc[Spring Cloud Config]
+** xref:spring-cloud-config.adoc[Spring Cloud Config]
 ** xref:spring-main.adoc[Spring Main]
 ** xref:spring-security.adoc[Spring Security]
 ** xref:spring-xml.adoc[Spring XML]
